--- a/.github/workflows/run_unittests.yml
+++ b/.github/workflows/run_unittests.yml
@@ -2,7 +2,7 @@ name: CMake
 
 on:
   push:
-    branches: [ RefactorGeom refactor-cmake]
+    branches: [ RefactorGeom, refactor-cmake]
   pull_request:
     branches: [ RefactorGeom ]
 
