--- a/.github/workflows/run_unittests.yml
+++ b/.github/workflows/run_unittests.yml
@@ -1,10 +1,13 @@
-name: CMake
+name: Run Unit Tests
 
 on:
   push:
-    branches: [ RefactorGeom, refactor-cmake]
+    branches: 
+      - RefactorGeom
+      - refactor-cmake
   pull_request:
-    branches: [ RefactorGeom ]
+    branches:
+      - RefactorGeom
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
