Testing post processed solution - trying to find a bug

--- a/Util/log4cxx.cfg
+++ b/Util/log4cxx.cfg
@@ -58,13 +58,36 @@ log4j.logger.pz.refpattern.TPZRefPatternDataBase=info
 
 log4j.logger.pz.mesh.sbfemelementgroup=info
 log4j.logger.pz.mesh.sbfemelementgroupMT=info
-log4j.logger.pz.mesh.geoelmapped=info
 log4j.logger.pz.mesh.sbfemvolume=info
-log4j.logger.pz.mesh.tpzgeoel=info
 
 log4j.logger.pz.sbfem=info
 
+log4j.logger.sbfemmultiphysicselgroup=debug,sbfemmultiphysicselgroup
+log4j.appender.sbfemmultiphysicselgroup=org.apache.log4j.FileAppender
+log4j.appender.sbfemmultiphysicselgroup.File=LOG/SBFemMultiphysicsElGroup.txt
+log4j.appender.sbfemmultiphysicselgroup.Append=true
+log4j.appender.sbfemmultiphysicselgroup.layout=org.apache.log4j.PatternLayout
+log4j.appender.sbfemmultiphysicselgroup.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+
+log4j.logger.sbfemmultiphysicscoefmatrices=debug,sbfemmultiphysicscoefmatrices
+log4j.appender.sbfemmultiphysicscoefmatrices=org.apache.log4j.FileAppender
+log4j.appender.sbfemmultiphysicscoefmatrices.File=LOG/SBFemMultiphysicsCoefMat.txt
+log4j.appender.sbfemmultiphysicscoefmatrices.Append=true
+log4j.appender.sbfemmultiphysicscoefmatrices.layout=org.apache.log4j.PatternLayout
+log4j.appender.sbfemmultiphysicscoefmatrices.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+
+log4j.logger.sbfemmultiphysicseigensystem=debug,sbfemmultiphysicseigensystem
+log4j.appender.sbfemmultiphysicseigensystem=org.apache.log4j.FileAppender
+log4j.appender.sbfemmultiphysicseigensystem.File=LOG/SBFemMultiphysicsEigenSystem.txt
+log4j.appender.sbfemmultiphysicseigensystem.Append=true
+log4j.appender.sbfemmultiphysicseigensystem.layout=org.apache.log4j.PatternLayout
+log4j.appender.sbfemmultiphysicseigensystem.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+
+
 log4j.logger.PiraHP.main=info
+
+log4j.logger.pz.mesh.tpzgeoel=info
+log4j.logger.pz.mesh.geoelmapped=info
 
 log4j.logger.pz.mesh.tpzinterpolatedelement.divide=command,divide
 log4j.appender.divide=org.apache.log4j.FileAppender
@@ -210,7 +233,7 @@ log4j.appender.logring.layout=org.apache.log4j.PatternLayout
 log4j.appender.logring.layout.ConversionPattern=%m%n
 
 
-log4j.logger.pz.mesh.tpzelmat=info,tpzelmat
+log4j.logger.pz.mesh.tpzelmat=debug,tpzelmat
 log4j.appender.tpzelmat=org.apache.log4j.FileAppender
 log4j.appender.tpzelmat.File=LOG/tpzelmat.log
 log4j.appender.tpzelmat.Append=false
