--- a/Util/log4cxx.cfg
+++ b/Util/log4cxx.cfg
@@ -25,7 +25,7 @@ log4j.appender.testing.layout.ConversionPattern=%5p (%F:%L) - %m%n
 
 log4j.logger.HDivDemo=info
 
-log4j.logger.HDivErrorEstimator=debug,HDivErrorEstimator
+log4j.logger.HDivErrorEstimator=info,HDivErrorEstimator
 log4j.appender.HDivErrorEstimator=org.apache.log4j.FileAppender
 log4j.appender.HDivErrorEstimator.File=LOG/HDivErrorEstimator.txt
 log4j.appender.HDivErrorEstimator.Append=true
@@ -33,12 +33,12 @@ log4j.appender.HDivErrorEstimator.layout=org.apache.log4j.PatternLayout
 log4j.appender.HDivErrorEstimator.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 
 log4j.logger.CreateMultiphysicsSpace=info
-log4j.logger.pz.mhmeshwrap = debug
+log4j.logger.pz.mhmeshwrap = info
 
-log4j.logger.pz.mesh.TPZCompElHDivCollapsed = debug
+log4j.logger.pz.mesh.TPZCompElHDivCollapsed = info
 
-log4j.logger.pz.pardisocontrol = debug
-log4j.logger.pz.matrix.eigen = debug
+log4j.logger.pz.pardisocontrol = info
+log4j.logger.pz.matrix.eigen = info
 
 log4j.logger.pz.MixedMeshSpaceControl=info
 
@@ -55,6 +55,9 @@ log4j.logger.pz.mesh.tpzcondensedcompel=info
 log4j.logger.pz.mixedpoisson.error=info
 
 log4j.logger.pz.refpattern.TPZRefPatternDataBase=info
+
+log4j.logger.pz.mesh.TPZCompElHDivSBFem=debug
+log4j.logger.pz.mesh.TPZLagrangeMultiplier=debug
 
 log4j.logger.pz.mesh.sbfemelementgroup=info
 log4j.logger.pz.mesh.sbfemelementgroupMT=info
@@ -82,6 +85,20 @@ log4j.appender.sbfemmultiphysicseigensystem.File=LOG/SBFemMultiphysicsEigenSyste
 log4j.appender.sbfemmultiphysicseigensystem.Append=true
 log4j.appender.sbfemmultiphysicseigensystem.layout=org.apache.log4j.PatternLayout
 log4j.appender.sbfemmultiphysicseigensystem.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+
+log4j.logger.sbfemmultiphysicsfulleigensys=debug,sbfemmultiphysicsfulleigensys
+log4j.appender.sbfemmultiphysicsfulleigensys=org.apache.log4j.FileAppender
+log4j.appender.sbfemmultiphysicsfulleigensys.File=LOG/SBFemMultiphysicsFullEigenSystem.txt
+log4j.appender.sbfemmultiphysicsfulleigensys.Append=true
+log4j.appender.sbfemmultiphysicsfulleigensys.layout=org.apache.log4j.PatternLayout
+log4j.appender.sbfemmultiphysicsfulleigensys.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+
+log4j.logger.pz.mesh.tpzmultiphysicsstiff=debug,pz.mesh.tpzmultiphysicsstiff
+log4j.appender.pz.mesh.tpzmultiphysicsstiff=org.apache.log4j.FileAppender
+log4j.appender.pz.mesh.tpzmultiphysicsstiff.File=LOG/MultiphysicsEKloc.txt
+log4j.appender.pz.mesh.tpzmultiphysicsstiff.Append=false
+log4j.appender.pz.mesh.tpzmultiphysicsstiff.layout=org.apache.log4j.PatternLayout
+log4j.appender.pz.mesh.tpzmultiphysicsstiff.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 
 
 log4j.logger.PiraHP.main=info
@@ -175,7 +192,7 @@ log4j.appender.checkconsistency.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 
 log4j.logger.pz.mesh.tpzcompel=info
 log4j.logger.pz.mesh.tpzcompelside=info
-log4j.logger.pz.mesh.tpzelementgroup=info
+log4j.logger.pz.mesh.tpzelementgroup=debug
 
 log4j.logger.pz.material.elasticity.data=info
 
@@ -499,25 +516,25 @@ log4j.appender.logThreadPool.Append=false
 log4j.appender.logThreadPool.layout=org.apache.log4j.PatternLayout
 log4j.appender.logThreadPool.layout.ConversionPattern=%m%n
 
-log4j.logger.pz.errorestimation.hdiv=debug,logHdivError
+log4j.logger.pz.errorestimation.hdiv=info,logHdivError
 log4j.appender.logHdivError = org.apache.log4j.FileAppender
 log4j.appender.logHdivError.File=LOG/HDivError.txt
 log4j.appender.logHdivError.Append=false
 log4j.appender.logHdivError.layout=org.apache.log4j.PatternLayout
 log4j.appender.logHdivError.layout.ConversionPattern=%m%n
 
-log4j.logger.pz.errorestimation.mhm=debug,logMHMError
+log4j.logger.pz.errorestimation.mhm=info,logMHMError
 log4j.appender.logMHMError = org.apache.log4j.FileAppender
 log4j.appender.logMHMError.File=LOG/MHMError.txt
 log4j.appender.logMHMError.Append=false
 log4j.appender.logMHMError.layout=org.apache.log4j.PatternLayout
 log4j.appender.logMHMError.layout.ConversionPattern=%m%n
 
-log4j.logger.pz.analysis.error=debug, logAnalysisError
+log4j.logger.pz.analysis.error=info, logAnalysisError
 log4j.appender.logAnalysisError = org.apache.log4j.FileAppender
 log4j.appender.logAnalysisError.File=LOG/AnalysisError.txt
 log4j.appender.logAnalysisError.Append=false
 log4j.appender.logAnalysisError.layout=org.apache.log4j.PatternLayout
 log4j.appender.logAnalysisError.layout.ConversionPattern=%m%n
 
-log4j.logger.dfn.fracture = debug
+log4j.logger.dfn.fracture = info
